--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -38,3 +38,6 @@ $color-exim-blue:#0062FF;
 $color-exim-grey:#ADADAD;
 $color-exim-dark-grey:#525252;
 $color-exim-green:#4BCC33;
+
+//color ims
+$color-ims-grey:#2e2e2e;
