--- a/src/styles/base/btn.scss
+++ b/src/styles/base/btn.scss
@@ -1,8 +1,9 @@
 .btn{
     border: none;
+    cursor: pointer;
     &__white{
         min-width: 15rem;
-        padding: 1.5rem 3rem;
+        padding: 1.5rem 5rem;
         background-color: rgba($color-white,1);
         color: rgba($color-black,1);
         transition: .2s;
