--- a/src/styles/sass-components/fixed/navigation.scss
+++ b/src/styles/sass-components/fixed/navigation.scss
@@ -3,9 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items:center;
-  background-color: rgba(#2e2e2e,1);
+  background-color: rgba($color-ims-grey,1);
   transition: .5s;
-  // position: fixed;
+  position: sticky;
   width: 100vw;
   top: 0;
   left: 0;
@@ -26,7 +26,7 @@
        padding:1rem 2rem;
        text-decoration: none;
        color: $color-white;
-       border-radius: 18px;
+      //  border-radius: 10px;
        transition: .2s;
        &:hover{
         background-color: rgba($color-white,1);
