--- a/src/styles/abstracts/animation.scss
+++ b/src/styles/abstracts/animation.scss
@@ -19,3 +19,28 @@
         clip-path: polygon(0 0, 100% 0, 100% 75%, 0% 100%);        
     }
 }
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+  @keyframes spin {
+      from{
+          transform: rotate(0);
+      }
+      to{
+        transform: rotate(360deg);
+      }
+  }
