--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -41,7 +41,7 @@ body{
   min-height: 500vh;
   width: 100vw;
   overflow-x: hidden;
-  background-color: rgba($color-ims-grey,.2);
+  // background-color: rgba($color-ims-grey,.2);
 }
 
 .layout{
