footer added and loader not working right

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,9 +9,13 @@
 
 // base
 @import "styles/base/base";
+@import "styles/base/text";
 @import "styles/base/utils";
 @import "styles/base/btn";
 @import "styles/base/table";
+@import "styles/base/loader";
+@import "styles/base/modal";
+@import "styles/base/backdrop";
 
 // <--sass-components-->
 
