--- a/src/styles/abstracts/animation.scss
+++ b/src/styles/abstracts/animation.scss
@@ -44,3 +44,27 @@
         transform: rotate(360deg);
       }
   }
+  @keyframes flip-down1 {
+    from{
+        transform: rotate(-3deg) rotateX(-90deg);
+        transform-origin: top;
+        opacity: 0;
+    }
+    to{
+      transform: rotate(-3deg) rotateX(0deg);
+      transform-origin: top;
+      opacity: 1;
+    }
+}
+@keyframes flip-down2 {
+  from{
+      transform: rotate(3deg) rotateX(-90deg);
+      transform-origin: top;
+      opacity: 0;
+  }
+  to{
+    transform: rotate(3deg) rotateX(0deg);
+    transform-origin: top;
+    opacity: 1;
+  }
+}
