--- a/src/styles/sass-components/students/students.scss
+++ b/src/styles/sass-components/students/students.scss
@@ -9,9 +9,9 @@
         align-items: center;
         // padding: 0 .5rem;
     }
-    &__search{
+    // &__search{
 
-    }
+    // }
     &__h1{
         font-weight: 100;
         text-transform: uppercase;
