--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -38,7 +38,7 @@ html{
 body{
   margin: 0;
   padding: 0;
-  min-height: 500vh;
+  // min-height: 500vh;
   width: 100vw;
   overflow-x: hidden;
   // background-color: rgba($color-ims-grey,.2);
@@ -47,6 +47,6 @@ body{
 .layout{
   position: relative;
   // padding: 0 1rem;
-  min-height: 200vh;
+  // min-height: 200vh;
 
 }
