--- a/src/styles/base/btn.scss
+++ b/src/styles/base/btn.scss
@@ -1,6 +1,7 @@
 .btn{
     border: none;
     cursor: pointer;
+    font-family: "PT Sans","san-serif";
     &__white{
         min-width: 15rem;
         padding: 1.5rem 5rem;
