--- a/src/styles/base/loader.scss
+++ b/src/styles/base/loader.scss
@@ -13,8 +13,8 @@ hsla(337, 84, 48, 0.75)
 hsla(160, 50, 48, 0.75)
 hsla(190, 61, 65, 0.75)
 hsla( 41, 82, 52, 0.75);
-$size: 2.5em;
-$thickness: 0.5em;
+$size: 15.5rem;
+$thickness: .5rem;
 
 // Calculated variables.
 $lat: ($size - $thickness) / 2;
@@ -40,11 +40,13 @@ transform: rotate(165deg);
 }
 
 &:before {
-  animation: before 2s infinite;
+  animation: before 1s infinite;
+  backface-visibility: hidden;
 }
 
 &:after {
-  animation: after 2s infinite;
+  animation: after 1s infinite;
+  backface-visibility: hidden;
 }
 }
 
