--- a/src/styles/base/text.scss
+++ b/src/styles/base/text.scss
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 7rem;
     text-transform: uppercase;
+    
     &__1{
         margin-left: 50rem;
         margin-bottom: -10rem;
@@ -10,6 +11,7 @@
         animation: flip-down1 .6s linear 1s forwards;
         // backface-visibility: hidden;
         opacity: 0;
+        
     }
     &__2{
         transform: rotate(5deg)  rotateX(-90deg);
@@ -17,4 +19,10 @@
         // backface-visibility: hidden;
         opacity: 0;
     }
+}
+.heading__primary{
+    text-align: center;
+    font-size: 10rem;
+    text-transform: uppercase;
+    margin: 5rem;
 }
